<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Non-translatable strings -->
    <string name="app_name" translatable="false">TymyApp</string>
    <string name="title_discussion_detail"  translatable="false">Discussion Detail</string>
    <string name="title_activity_site_list"  translatable="false">SiteList</string>
    <string name="hello_world"  translatable="false">Hello world!</string>
    <string name="add_site_url" translatable="false">Url</string>
    <string name="http"  translatable="false">http://</string>
    <string name="post_text" translatable="false">Post text</string>
    <string name="post_createdby" translatable="false">Name</string>
    <string name="post_createdat" translatable="false">Date:Time</string>
    <string name="ds_caption" translatable="false">Discussion caption</string>
    <string name="ds_description" translatable="false">Discussion description</string>
    <string name="empty_discussion_list" translatable="false">Empty discussions list</string>

    <!-- translatable strings -->
    <string name="action_settings">Settings</string>
    <string name="add_site">Add Site</string>
    <string name="add_site_name">Name</string>
    <string name="add_site_subimt">Add</string>
    <string name="add_site_user">Login</string>
    <string name="add_site_pass">Password</string>
    <string name="site_not_added">Site add failed!</string>
    <string name="site_not_updated">Site update failed!</string>
    <string name="delete">Delete</string>
    <string name="site_deleted">Site deleted</string>
    <string name="site_not_deleted">Site delete failed!</string>
    <string name="edit">Edit</string>
    <string name="action_add_site">Add Site</string>
    <string name="empty_site_list">No Sites..\n(use menu \'Add Site\')</string>
    <string name="ds_new_posts">new: </string>
    <string name="add_site_update">Update</string>
    <string name="error">Error</string>

</resources>
